# oil

./: CMakeLists.txt  dist.info
doc/: news.html
doc/manual/arch/: index.html  layers.html
doc/manual/basics/: module.html
doc/manual/corba/: features.html
share/oil/doc/: contact.html  index.html
share/oil/doc/about/: papers.html
share/oil/doc/manual/: index.html  ludo.html
share/oil/doc/manual/arch/: core.html  flavors.html  index.html  layers.html  rmi.html
share/oil/doc/manual/basics/: brokers.html  index.html  proxies.html  servants.html  threads.html
share/oil/doc/manual/corba/: config.html  features.html  index.html  intercept.html  loadidl.html  mapping.html
share/oil/doc/release/: changes.html  index.html  previous.html
